proyectos/ProyectoOpcional/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: publico
  
---
apiVersion: v1
kind: Namespace
metadata:
  name: privado
